# Mollifier-Theta-Expansion

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: DEV_NOTES_DO_NOT_SIMPLIFY.md  IR_SPEC.md  LEMMAS.md  PLAN.md  REPRO_CONREY89.md
docs/schemas/: math_params_envelope_v1_0.md  overhead_report_envelope_v1_0.md
mollifier_theta/: __init__.py  cli.py
mollifier_theta/analysis/: __init__.py  exponent_model.py  length_aware_di.py  overhead_report.py  slack.py  strategy_enumerator.py  theta_breakdown.py  trace_diff.py  what_if.py
mollifier_theta/core/: ir.py  (+9 more)
tests/: conftest.py  golden_spectral_pipeline.json  golden_sum_structure.json  golden_term.json  test_approx_fe.py  test_conrey89_pipeline.py  test_conrey89_spectral.py  test_constraint_table_sanity.py  test_deep_immutability.py  test_delta_method.py  test_delta_method_delayed.py  test_derivation_trace.py  test_diagnose_render.py  test_diagnose_slack.py  test_diagnose_what_if.py  test_diagonal_extract.py  test_diagonal_split.py  test_envelope_loader.py  test_exponent_model.py  test_fuzz_invariants.py  test_golden_envelopes.py  test_integrate_t.py  test_invariants.py  test_ir.py  test_kernel_state.py  test_kuznetsov.py  test_ledger.py  test_length_aware_di.py  test_length_aware_di_bound_integration.py  test_length_aware_di_model_contract.py  test_math_parameter_export.py  test_math_parameter_export_schema.py  test_open_square.py  test_phase_absorb.py  test_phase_absorb_deterministic.py  test_phase_ast.py  test_proof_certificate.py  test_reports.py  test_scale_model.py  test_serialization_golden.py  (+16 more)
(+37 files in other folders)
