[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mollifier-theta"
version = "0.1.0"
description = "Mollified zeta second-moment pipeline through the theta < 4/7 barrier"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "typer>=0.9",
    "sympy>=1.12",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
]

[project.scripts]
mollifier = "mollifier_theta.cli:app"

[tool.setuptools.packages.find]
include = ["mollifier_theta*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
